# watchdog

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
deploy/: watchdog.service
src/watchdog/: __init__.py  __main__.py  config.py  notifications.py  scheduler.py  state.py  storage.py
src/watchdog/checkers/: __init__.py  base.py  heartbeat.py  http.py  ping.py
tests/: test_checkers.py  test_config.py  test_heartbeat.py  test_integration.py  test_main.py  test_notifications.py  test_retention.py  test_scheduler.py  test_state.py  test_storage.py
